tests/toylang/neg/001513_mutation.toylang
program a = { var a var a : bool bool; } .
